--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@adonisjs/ace": "^4.0.7",
-    "@adonisjs/auth": "^2.0.10",
-    "@adonisjs/bodyparser": "^2.0.0",
-    "@adonisjs/cors": "^1.0.3",
-    "@adonisjs/fold": "^4.0.5",
-    "@adonisjs/framework": "^4.0.28",
-    "@adonisjs/ignitor": "^1.0.14",
-    "@adonisjs/lucid": "^4.0.24",
-    "@adonisjs/session": "^1.0.19",
-    "@adonisjs/shield": "^1.0.4",
+    "@adonisjs/ace": "^5.0.0",
+    "@adonisjs/auth": "^3.0.1",
+    "@adonisjs/bodyparser": "^2.0.2",
+    "@adonisjs/cors": "^1.0.5",
+    "@adonisjs/fold": "^4.0.7",
+    "@adonisjs/framework": "^5.0.4",
+    "@adonisjs/ignitor": "^2.0.5",
+    "@adonisjs/lucid": "^5.0.2",
+    "@adonisjs/session": "^1.0.20",
+    "@adonisjs/shield": "^1.0.6",
+    "@adonisjs/validator": "^5.0.3",
     "mysql": "^2.15.0",
+    "nodemon": "^1.14.12",
     "slugify": "^1.2.9"
   },
   "devDependencies": {},
